[workspace]
members = ["cbor"]

[package]
name = "aqueduct"
version = "0.1.0"
edition = "2024"

[features]
default = []
async = ["futures-io", "async-trait"]

[dependencies]
aqueduct-cbor = { path = "cbor" }
crc = "3"
async-trait = { version = "0.1", optional = true }
futures-io = { version = "0.3", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
ureq = "2"

[[test]]
name = "s3"
required-features = ["async"]

[[test]]
name = "async_stream"
required-features = ["async"]
