[package]
name = "bundle-bpv7"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
bundle-cbor = { path = "../cbor", default-features = false }
bundle-io = { path = "../io", default-features = false }
crc = { version = "3", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
