[package]
name = "bundle"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["bundle-cbor/std", "bundle-io/std"]
async = ["std", "futures-io", "async-trait"]

[dependencies]
bundle-bpv7 = { path = "../bpv7" }
bundle-cbor = { path = "../cbor", default-features = false }
bundle-io = { path = "../io", default-features = false }
async-trait = { version = "0.1", optional = true }
embedded-storage = { version = "0.3", optional = true }
futures-io = { version = "0.3", optional = true }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
bundle-bpv7 = { path = "../bpv7" }
bundle-io = { path = "../io" }
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
ureq = "2"

[[test]]
name = "s3"
required-features = ["async"]

[[test]]
name = "async_stream"
required-features = ["async"]
